--- a/templates/me.html
+++ b/templates/me.html
@@ -27,7 +27,7 @@
 			<p>Nombre y apellidos</p>
 			<p class="MeContainer-Info-P">Diego Losada Regos</p>
 			<p>Trabajo</p>
-			<p class="MeContainer-Info-P">Desarrollador <i>Back-end</i> de código seguro</p>
+			<p class="MeContainer-Info-P">Desarrollador Web de código seguro</p>
 			<p>Nacimiento</p>
 			<p class="MeContainer-Info-P">21/06/1990</p>
 			<p>Dirección</p>
