--- a/templates/studies/experience.html
+++ b/templates/studies/experience.html
@@ -1,1 +1,25 @@
-<h1>Experiencia profesional</h1>
+<section class="StudieContainer-Item">
+	<h3 class="StudiesContainer-Item-Header">Faitic (Beca de Servicios Informáticos, Uvigo, 2014)</h3>
+	<div class="StudiesContainer-Item-Content__noActive" id="faitic">
+		<div class="StudiesContainer-Experience">
+			<p>Hola</p>
+		</div>
+	</div>
+	<div class="StudiesContainer-Item-Footer">
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="faitic"><span class="icon-circle-down" id="faiticSpan"></span></button>
+	</div>
+</section>
+
+<section class="StudieContainer-Item">
+	<h3 class="StudiesContainer-Item-Header">Escuela de Peritos (Beca de Servicios Informáticos, Uvigo, 2013)</h3>
+	<div class="StudiesContainer-Item-Content__noActive" id="peritos">
+		<div class="StudiesContainer-Experience">
+			<p>Hola</p>
+		</div>
+	</div>
+	<div class="StudiesContainer-Item-Footer">
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="peritos"><span class="icon-circle-down" id="peritosSpan"></span></button>
+	</div>
+</section>
+
+<script src="js/studies/experience.js"></script>
