--- a/templates/studies/self-study.html
+++ b/templates/studies/self-study.html
@@ -12,7 +12,11 @@
 		<div class="StudiesContainer-Item-pStudy">
 			<p>Mis conocimientos en <i>back-end</i> se dividen en el entorno de programación Node.js y el lenguaje PHP. Ambos sistemas difieren entre si en muchos aspectos con ventajas para cada uno de ellos.</p>
 			<p>El primer lenguaje que aprendí ha sido Node.js. Se trata de un entorno de programación basado en JavaScript en el lado del servidor, que provoca que todo el código desarrollado sea asíncrono. La gran ventaja de esto es su bajo consumo de memoria y su rapidez de ejecución con lo que se obtiene un gran rendimiento en entornos de estrés.</p>
-			<p>El asincronismo de Node.js junto con la API Socket.IO facilitan de manera considerable el desarrollo de aplicaciones en tiempo real.
+			<p>El asincronismo de Node.js junto con la API Socket.IO facilitan de manera considerable el desarrollo de aplicaciones en tiempo real, característica aprovechada en el proyecto de final de carrera de la Uvigo.</p>
+			<p>Mis referencias a la hora de aprender a programar en Node.js han sido su <a href="https://nodejs.org/en/docs/" target="_blank">documentación oficial</a> y el libro <b>Node.js</b> de George Ornbo.</p>
+			<p>Con respecto a PHP, los motivos por los que decidí aprenderlo junto con el <i>framework</i> Symfony han sido su demanda profesional y su estilo de programación completamente diferente a Node.js, debido a que no se trata de un sistema asíncrono, siendo más parecido a lenguajes como C o Java, de los que ya tenía experiencia a lo largo de los cursos y las titulaciones.</p>
+			<p>El framework Symfony me ha parecido interesante para el desarrollo modular de la aplicación, utilizandolo en el proyecto del MISTIC como entorno de programación.</p>
+			<p>Las referencias que he utilizado para aprender PHP han sido el libro <b>Curso de programaión Web</b> de Scott McCracken y su <a href="https://secure.php.net/manual/es/index.php" target="_blank">documentación oficial</a>. Con respecto a Symfony solamente he utilizado su <a href="http://symfony.com/doc/current/index.html" target="_blank">libro oficial</a>.
 		</div>
 	</div>
 	<div class="StudiesContainer-Item-Footer">
@@ -29,7 +33,12 @@
 			</div>
 			<img src="images/logo-mysql.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="79">
 		</div>
-		<div class="StudiesContainer-Item-pStudy">Hola</div>		
+		<div class="StudiesContainer-Item-pStudy">
+			<p>Con respecto a las bases de datos también tengo experiencia en dos sistemas completamente diferentes. Por un lado, he utilizado un lenguaje No-SQL en el proyecto de la Uvigo, concretamente MongoDB. Aunque debido al uso de Mongoose para facilitar la organización de la base de datos no me ha permitido desarrollarla de una manera completamente No-SQL, he entendido el tipo de bases de datos y las posibilidades que ofrece, adaptándose perfectamente al entorno Node.js debido al uso de objetos JSON para el almacenamiento de datos.</p>
+			<p>Por otro lado, con respecto a las bases de datos SQL la que más he utilizado ha sido MySQL que es con la que más experiencia tengo, aunque también he utilizado Oracle a lo largo del MISTIC.</p>
+			<p>Sin lugar a dudas, las bases de datos son uno de mis puntos favoritos a la hora de desarrollar una aplicación web, llevándome a escoger como tema principal para el proyecto de fin de máster los ataques de inyección SQL.</p>
+			<p>La documentación utilizada para aprender acerca de MongoDB ha sido su <a href="https://docs.mongodb.org/getting-started/node/" target="_blank">documentación oficial</a> y para SQL, a parte de los materiales del curso realizado en la Uvigo utilizo como referencia el libro <b>SQL</b> de Francisco Charte Ojeda.</p> 
+		</div>		
 	</div>
 	<div class="StudiesContainer-Item-Footer">
 		<button type="button" class="StudiesContainer-ButtonDown" data-button="BBDD"><span class="icon-circle-down" id="BBDDSpan"></span></button>
@@ -45,7 +54,11 @@
 			</div>
 			<img src="images/logo-bootstrap.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="150">
 		</div>
-		<div class="StudiesContainer-Item-pStudy">Hola</div>		
+		<div class="StudiesContainer-Item-pStudy">
+			<p>Mi experiencia en <i>Front-end</i> es más corta que con las tecnologías en el lado del servidor. Mis proyectos han carecido de una presentación visual atractiva por falta de conocimientos en maquetación web. Por ese motivo he decidido realizar el conjunto de cursos en desarrollo <i>Front-end</i>  de Platzi, que aunque aún no he realizado el examen de certificación, me ha servido para realizar este portafolio.</p>
+			<p>Antes de realizar los cursos había aprendido por mi cuenta a utilizar jQuery, desde el proyecto de la Uvigo, para una gestión más sencilla de JavaScript debido a la importancia que toma el lenguaje a lo largo de todo el proyecto. Para aprender a utilizarlo he utilizado su <a href="http://api.jquery.com/" target="_blank">documentación oficial</a>.</p>
+			<p>Con respecto a CSS he utilizado Bootstrap desde el proyecto del MISTIC. En este caso, yo era el responsable tanto del desarrollo <i>Front-end</i> como el desarrollo <i>Back-end</i>. Bootstrap me ha ayudado a realizar una presentación mucho más atractiva gracias a sus diseños pre-definidos pudiendo añadirlos a la página de una manera sencilla. Al igual que con jQuery, he utilizado la <a href="http://getbootstrap.com/components/" target="_blank">documentación oficial</a> para aprender a utilizar dicho <i>framework</i>.</p>
+		</div>		
 	</div>
 	<div class="StudiesContainer-Item-Footer">
 		<button type="button" class="StudiesContainer-ButtonDown" data-button="frontend"><span class="icon-circle-down" id="frontendSpan"></span></button>
@@ -58,7 +71,11 @@
 		<div class="StudiesContainer-Item-logoStudy">
 			<img src="images/logo-cordova.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="250" height="115">
 		</div>
-		<div class="StudiesContainer-Item-pStudy">Hola</div>		
+		<div class="StudiesContainer-Item-pStudy">
+			<p>Mi experiencia e desarrollo de Apps para <i>smartphones</i> no es muy extensa. Aunque he realizado el curso de desarrollo android en la Uvigo, nunca he desarrollado ninguna App en código nativo por mi cuenta.</p>
+			<p>En el proyecto de la Uvigo he desarrollado una aplicación móvil. Debido a la necesidad de utilizar <i>websockects</i> tanto en la aplicación web como en la aplicación móvil el desarrollo en Java se atojaba complicado, o por lo menos más dificil que el desarrollo con Cordova.</p>
+			<p>Gracias a Cordova he reutilizado gran parte del código desarrollado en la aplicación web en la aplicación móvil. Este sistema permite realizar Apps móviles con código web (HTML, CSS y JS) y exportarlas a casi cualquier entorno móvil (Android, IOS, Windows Phone, etc.). Para aprender a utilizar este sistema tan solo he tulizado su <a href="https://cordova.apache.org/docs/en/5.1.1/guide/overview/" target="_blank">documentación oficial</a>.</p>
+		</div>		
 	</div>
 	<div class="StudiesContainer-Item-Footer">
 		<button type="button" class="StudiesContainer-ButtonDown" data-button="phone"><span class="icon-circle-down" id="phoneSpan"></span></button>
@@ -69,9 +86,15 @@
 	<h3 class="StudiesContainer-Item-Header">Seguridad</h3>
 	<div class="StudiesContainer-Item-Content__noActive" id="security">
 		<div class="StudiesContainer-Item-logoStudy">
+			<div class="StudiesContainer-Item-logoStudy-Container1">
+				<img src="images/logo-owasp.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="100" height="100">
+			</div>	
 			<img src="images/logo-kali.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="200" height="100">
 		</div>
-		<div class="StudiesContainer-Item-pStudy">Hola</div>
+		<div class="StudiesContainer-Item-pStudy">
+			<p>El MISTIC me ha dado la base para el desarrollo de aplicaciones seguras y una de las referencias para dicho desarrollo es <a href="https://www.owasp.org/index.php/Main_Page" target="_blank">OWASP</a>. Dentro de esta página puedes encontrar multitud de posibles ataques y cómo solucionarlos, siendo de gran utilidad a la hora de desarrollar una aplicación web.</p>
+			<p>Otra herramienta que utilizo al terminar una aplicación es <a href="https://www.kali.org/" target="_blank">Kali Linux</a>. Aunque no he realizado la especialidad de pentesting y auditoría en el MISTIC he aprendido a utilizar esta distribución gracias al libro <a href="http://0xword.com/es/libros/40-libro-pentesting-kali.html" target="_blank">Pentesting con Kali</a>. Es una distribución muy sencilla de utilizar con las herramientas de pentesting más avanzadas del momento. Desde ella se pueden realizar los pasos de recogida de información, análisis y explotación de una aplicación web. Esto me ayuda a detectar problemas antes del desplegar cualquier aplicación a un entorno de desarrollo.</p>
+		</div>
 	</div>
 
 	<div class="StudiesContainer-Item-Footer">
@@ -79,4 +102,4 @@
 	</div>
 </section>
 
-<script src="js/studies-selfstudy.js"></script>
+<script src="js/studies/selfstudy.js"></script>
