--- a/templates/studies-nav.html
+++ b/templates/studies-nav.html
@@ -5,4 +5,4 @@
 </nav>
 <section class="StudiesContainer-Content" id="studies"></section>
 
-<script src="js/studies-nav.js"></script>
+<script src="js/studies/nav.js"></script>
