Commit 12. Contenido añadido a la página experiencia. Estructura de la página portafolio creada.

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,1 +1,18 @@
-<header>Porfolio</header>
+<section class="PortfolioContainer">
+	<header class="PortfolioHeader">
+		<h2>Portafolio</h2>
+	</header>
+	<section class="PortfolioContent">
+		<div class="PortfolioContent-Item">
+			<button type="button" class="PortfolioContent-Item-Button"><img src="images/logo-uvigo.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
+			<p class="PortfolioContent-Item-P">Proyecto Uvigo</p>
+		</div>
+		<div class="PortfolioContent-Item">
+			<button type="button" class="PortfolioContent-Item-Button"><img src="images/logo-uoc.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
+			<p class="PortfolioContent-Item-P">Proyecto UOC</p>
+		</div>
+		<div class="PortfolioContent-Item">
+			<p class="PortfolioContent-Item-P">Portafolio</p>
+		</div>
+	</section>
+</section>
