--- a/templates/studies/experience.html
+++ b/templates/studies/experience.html
@@ -2,7 +2,7 @@
 	<h3 class="StudiesContainer-Item-Header">Faitic (Beca de Servicios Informáticos, Uvigo, 2014)</h3>
 	<div class="StudiesContainer-Item-Content__noActive" id="faitic">
 		<div class="StudiesContainer-Experience">
-			<p>Hola</p>
+			<p>En mi segunda beca de trabajo con la universidad de Vigo he trabajado en el servicio de teledocencia (<a href="http://faitic.uvigo.es/index.php/es/" target="_blank">Faitic</a>). Mi tarea era administrar usuarios y cursos de la plataforma (alta de alumnos, alta de cursos, resolución de incidencias, etc.). La pataforma estaba montada sobre joomla con los módulos de Claroline y Moodle para la gestión y creación de cursos.</p>
 		</div>
 	</div>
 	<div class="StudiesContainer-Item-Footer">
@@ -14,7 +14,7 @@
 	<h3 class="StudiesContainer-Item-Header">Escuela de Peritos (Beca de Servicios Informáticos, Uvigo, 2013)</h3>
 	<div class="StudiesContainer-Item-Content__noActive" id="peritos">
 		<div class="StudiesContainer-Experience">
-			<p>Hola</p>
+			<p>Mi primera beca de trabajo con la universidad de Vigo fue en la escuela de peritos e ingeniería industrial de Vigo. Mi labor consistía en atender incidencias con el software y hardware de las aulas e intentar repararlo en la medida de lo posible. Otras labores que llevaba a cabo eran las de instalación de software y mantenimiento de los ordenadores.</p>
 		</div>
 	</div>
 	<div class="StudiesContainer-Item-Footer">
