--- a/styles/style.css
+++ b/styles/style.css
@@ -73,16 +73,6 @@ h2{
 	margin: 0;
 }
 
-/*Provisional*/
-/*.NavContainer-Text{
-	border:none;
-	width: 100%;
-	height: 100%;
-	padding: 1em 0;
-	background: none;
-	margin: 0;
-}*/
-
 
 /*Container clases*/
 .MainContainer{
@@ -187,10 +177,6 @@ h2{
 }
 
 /*CSS Studies Page*/
-/*.StudiesContainer{
-	color:black;
-	margin:5% 5% 5% 5%;
-}*/
 
 .StudiesContainer-Nav{
 	position: absolute;
@@ -407,7 +393,7 @@ h2{
 
 /*Experience Page*/
 .StudiesContainer-Experience{
-	margin-top: 2em;
+	margin: 2em 1em 1em 1em;
 	width: 100%;
 	background: none;
 	text-align: justify;
@@ -415,10 +401,51 @@ h2{
 
 /*CSS Portfolio Page*/
 .PortfolioContainer{
-	display:inline-block;
+	display:block;
 	color:black;
 	background: none;
 	margin:5%;
+}
+
+.PortfolioHeader{
+	border-bottom: dotted #A4BEDE .5em;
+}
+
+.PortfolioContent{
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
+	display:flex;
+	flex-flow: row wrap;
+	justify-content:space-around;
+	margin-top: 8%;
+}
+
+.PortfolioContent-Item{
+	display:block;
+	height: 250px;
+	width: 200px;
+	margin-top: 2em;
+	text-align: center;
+}
+
+.PortfolioContent-Item-Button{
+	background: none;
+	overflow: hidden;
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
+}
+
+.PortfolioContent-Item-Image{
+	-webkit-border-radius: 30px;
+	-moz-border-radius: 30px;
+	border-radius: 30px;
+}
+
+.PortfolioContent-Item-P{
+	margin-top: 2em;
 }
 
 /*CSS Contact Page*/
