--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,18 +1,18 @@
-<section class="PortfolioContainer">
+<section class="PortfolioContainer" id="portfolio">
 	<header class="PortfolioHeader">
 		<h2>Portafolio</h2>
 	</header>
 	<section class="PortfolioContent">
 		<div class="PortfolioContent-Item">
-			<button type="button" class="PortfolioContent-Item-Button"><img src="images/logo-uvigo.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
-			<p class="PortfolioContent-Item-P">Proyecto Uvigo</p>
+			<button type="button" class="PortfolioContent-Item-Button" data-button="uvigo"><img src="images/logo-uvigo.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
 		</div>
 		<div class="PortfolioContent-Item">
-			<button type="button" class="PortfolioContent-Item-Button"><img src="images/logo-uoc.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
-			<p class="PortfolioContent-Item-P">Proyecto UOC</p>
+			<button type="button" class="PortfolioContent-Item-Button" data-button="mistic"><img src="images/logo-uoc.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
 		</div>
 		<div class="PortfolioContent-Item">
-			<p class="PortfolioContent-Item-P">Portafolio</p>
+			<button type="button" class="PortfolioContent-Item-Button" data-button="my-portfolio"><span class="icon-wallet PortfolioContent-Item-Span"></span></button>
 		</div>
 	</section>
 </section>
+
+<script src="js/portfolio.js"></script>
