Commi 15. Cambio de fuente, color y fondo. Estructura interna de cada sección de los trabajos acabada.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,12 @@
 html {
 	font-size: 14px;
+	font-family: 'Source Sans Pro', sans-serif;
 }
 
 body{
-	background: #A4BEDE;
+	background-image: url("../images/fondo.jpg");
+	background-repeat: repeat-y;
+	background-size: cover;
 }
 
 ul{
@@ -16,7 +19,7 @@ p{
 }
 
 a{
-	color: #A4BEDE;
+	color: #D2691E;
 	text-decoration: none;
 }
 
@@ -35,12 +38,12 @@ h2{
 	bottom: 5%;
 	left:5%;
 	width: 10%;
-	background: #A4BEDE;
+	background: none;
 	font-size: 1.5em;
 }
 
 .NavContainer-Button-First{
-	background: #A4BEDE;
+	background: #DEB887;
 	-webkit-border-radius: 15px 0 0 0;
 	-moz-border-radius: 15px 0 0 0;
 	border-radius: 15px 0 0 0;
@@ -54,14 +57,11 @@ h2{
 }
 
 .NavContainer-Button__active{
-/*	background:#FF9C00;
-*/
-	background: white;
+	background: rgba(255,255,255,0.8);
 }
 
 .NavContainer-Button__noActive{
-	/*background: white;*/
-	background: #91D3DE;
+	background: #DEB887;
 }
 
 .NavContainer-Button{
@@ -82,7 +82,7 @@ h2{
 	top:5%;
 	right: 5%;
 	min-height: 90%;
-	background: white;
+	background: rgba(255,255,255,0.8);
 	-webkit-border-radius: 0 15px 15px 0;
 	-moz-border-radius: 0 15px 15px 0;
 	border-radius: 0 15px 15px 0;
@@ -170,7 +170,7 @@ h2{
 	margin-top: .15em;
 	margin-bottom: .5em;
 	margin-right: 0;
-	background: #A4BEDE;
+	background: #DEB887;
 	color:white;
 	width: 100%;
 	padding:.25em 1em .25em 1em;
@@ -187,8 +187,8 @@ h2{
 	position:relative;
 	font-size: 1em;
 	border-style: solid;
-	border-color: #A4BEDE;
-	border-width: .75em;
+	border-color: white;
+	border-width: 8px;
 	background: none;
 	color:black;
 	padding: 1.5em 2.5em;
@@ -321,7 +321,7 @@ h2{
 }
 
 .StudiesContainer-Item-Footer{
-	border-bottom: dotted #A4BEDE .5em;
+	border-bottom: solid #DEB887 4px;
 	width: 100%;
 }
 
@@ -408,7 +408,7 @@ h2{
 }
 
 .PortfolioHeader{
-	border-bottom: dotted #A4BEDE .5em;
+	border-bottom: solid #DEB887 6px;
 }
 
 .PortfolioContent{
@@ -419,13 +419,14 @@ h2{
 	display:flex;
 	flex-flow: row wrap;
 	justify-content:space-around;
-	margin-top: 8%;
+	margin-top: 5%;
 }
 
 .PortfolioContent-Item{
 	display:block;
-	height: 250px;
-	width: 200px;
+	height: 310px;
+	width: 250px;
+	overflow: hidden;
 	margin-top: 2em;
 	text-align: center;
 }
@@ -442,6 +443,8 @@ h2{
 
 .PortfolioContent-Item-P{
 	margin-top: 2em;
+	font-weight: bold;
+	font-size: 1.2em;
 }
 
 .PortfolioContent-Item-Span{
@@ -456,12 +459,36 @@ h2{
 	margin-top: 1em;
 	margin-bottom: 2em;
 	width: 100%;
+	display:table;
 }
 
+.PortfolioContent-Header__row{
+	display: table-row;
+
+	
+}
+
+.celdaPrimaria{
+	border-bottom: solid black 2px;
+	display: table-cell;
+	vertical-align: middle;
+	width: 10%;
+	padding: .5em;
+	text-align: justify;
+}
+
+.celdaSecundaria{
+	border-bottom: solid black 2px;
+	display: table-cell;
+	vertical-align: middle;
+	width: 80%;
+	padding: .5em .5em .5em 2em;
+	text-align: justify;
+}
 .PortfolioContent-Header__p{
-	margin:.5em 0;
-	font-size: 1.2em;
-	background: #A4BEDE;
+	
+	font-size: 1em;
+	/*background: #A4BEDE;*/
 }
 
 .PortfolioContent-Text{
