--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -5,13 +5,15 @@
 	<section class="PortfolioContent">
 		<div class="PortfolioContent-Item">
 			<button type="button" class="PortfolioContent-Item-Button" data-button="uvigo"><img src="images/logo-uvigo.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
+			<p class="PortfolioContent-Item-P">Proyecto de final de carrera de Ingeniería técnica de telecomunicaciones</p>
 		</div>
 		<div class="PortfolioContent-Item">
-			<button type="button" class="PortfolioContent-Item-Button" data-button="mistic"><img src="images/logo-uoc.png" class="PortfolioContent-Item-Image" alt="" width="200" height="200"></button>
+			<button type="button" class="PortfolioContent-Item-Button" data-button="mistic"><img src="images/logo-uoc.png" class="PortfolioContent-Item-Image" alt="" width="250" height="200"></button>
+			<p class="PortfolioContent-Item-P">Proyecto de final de máster del MISTIC</p>
 		</div>
-		<div class="PortfolioContent-Item">
-			<button type="button" class="PortfolioContent-Item-Button" data-button="my-portfolio"><span class="icon-wallet PortfolioContent-Item-Span"></span></button>
-		</div>
+		<!-- <div class="PortfolioContent-Item">
+			<button type="button" class="PortfolioContent-Item-Button" data-button="my-portfolio"><img src="images/portfolio.jpg" class="PortfolioContent-Item-Image" alt="" width="300" height="150"></span></button>
+		</div> -->
 	</section>
 </section>
 
