--- a/templates/portfolio/my-portfolio.html
+++ b/templates/portfolio/my-portfolio.html
@@ -1,10 +1,25 @@
 <button type="button" class="PortfolioContent-Item-Button" data-button="back"><span class="icon-circle-left PortfolioBack"></span></button>
 
 <div class="PortfolioContent-Header">
-	<p class="PortfolioContent-Header__p">Título:</p>
-	<p class="PortfolioContent-Header__p">Tecnologías:</p>
-	<p class="PortfolioContent-Header__p">Año:</p>
-	<p class="PortfolioContent-Header__p">Enlace:</p>
+	<div class="PortfolioContent-Header__row">
+		<p class="PortfolioContent-Header__p celdaPrimaria">Título</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria">Desarrollo de una aplicación web y móvil, para la administración de un servicio de logística para PYMES (Módulo <i>Back-end</i>)</p>
+	</div>
+	<div class="PortfolioContent-Header__row">
+		<p class="PortfolioContent-Header__p celdaPrimaria">Tecnologías</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria">Node.js, MongoDB, HTML5, CSS3, JS, jQuery, Cordova</p>
+	</div>
+
+	<div class="PortfolioContent-Header__row">
+		<p class="PortfolioContent-Header__p celdaPrimaria">Año</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria">2013-2014</p>
+	</div>
+
+
+	<div class="PortfolioContent-Header__row">
+		<p class="PortfolioContent-Header__p celdaPrimaria">Enlace</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria"></p>
+	</div>
 </div>
 
 <div class="PortfolioContent-Text">
