--- a/templates/portfolio/mistic.html
+++ b/templates/portfolio/mistic.html
@@ -3,27 +3,30 @@
 <div class="PortfolioContent-Header">
 	<div class="PortfolioContent-Header__row">
 		<p class="PortfolioContent-Header__p celdaPrimaria">Título</p>
-		<p class="PortfolioContent-Header__p celdaSecundaria">Desarrollo de una aplicación web y móvil, para la administración de un servicio de logística para PYMES (Módulo <i>Back-end</i>)</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria">Seguridad en aplicaciones web</p>
 	</div>
 	<div class="PortfolioContent-Header__row">
 		<p class="PortfolioContent-Header__p celdaPrimaria">Tecnologías</p>
-		<p class="PortfolioContent-Header__p celdaSecundaria">Node.js, MongoDB, HTML5, CSS3, JS, jQuery, Cordova</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria">PHP, Symfony, MySQL, HTML5, CSS3, Bootstrap, JS, jQuery, SQLmap</p>
 	</div>
 
 	<div class="PortfolioContent-Header__row">
 		<p class="PortfolioContent-Header__p celdaPrimaria">Año</p>
-		<p class="PortfolioContent-Header__p celdaSecundaria">2013-2014</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria">2015</p>
 	</div>
 
 
 	<div class="PortfolioContent-Header__row">
-		<p class="PortfolioContent-Header__p celdaPrimaria">Enlace</p>
-		<p class="PortfolioContent-Header__p celdaSecundaria"></p>
+		<p class="PortfolioContent-Header__p celdaPrimaria">Enlaces</p>
+		<p class="PortfolioContent-Header__p celdaSecundaria"><a href="http://tfmdlrprod.es/login" target="_blank">Aplicación principal</a>, <a href="http://tfmdlrtest.es/login.php" target="_blank">Aplicación de prueba</a> y <a href="http://openaccess.uoc.edu/webapps/o2/bitstream/10609/42542/6/dlosadarTFM0615Memoria.pdf" target="_blank">memoria del proyecto</a></p>
 	</div>
 </div>
 
 <div class="PortfolioContent-Text">
-	<p>Hola</p>
+	<p>El objetivo de este proyecto de fin de máster ha sido desarrollar una aplicación web capaz de escanear servidores externos en busca de una o varias vulnerabilidades. La vulnerabilidad escogida ha sido SQL Injection. El proyecto consta de dos aplicaciones web: la principal, responsable de realizar el análisis y una secundaria, vulnerable a ataques de inyección SQL para probar el correcto funcionamiento de la aplicación principal.</p>
+	<p>Para conseguir realizar el análisis he utilizado una aplicación externa, llamada SQLmap, con la que se puede realizar un análisis completo de la vulnerabilidad con solo introducirle los parámetros de las consultas. Debido a mi preferencia a trabajar en Debian en el desarrollo del servidor sólo he tenido que introducir la aplicación dentro del servidor y ejecutar los comandos adecuados con PHP para crear una interfaz desde la que se puedan conseguir los objetivos marcados.</p>
+	<p>Con respecto a la aplicación de pruebas, solamente tengo que añadir que es muy sencilla en todos los aspectos y solamente la utilizo como pruebas de la aplicación principal.</p>
+	<p>Para saber más acerca de cómo utilizar la aplicación basta con acceder a la misma ya que dentro tiene un apartado en donde se explica cómo utilizarla. Para más información acerca del funcionamiento interno se puede consultar la memoria del proyecto, que se puede encontrar en el enlace correspondiente en la cabecera de esta página.</p>
 </div>
 
 <script src="js/portfolio.js"></script>
