--- a/templates/portfolio/uvigo.html
+++ b/templates/portfolio/uvigo.html
@@ -23,7 +23,10 @@
 </div>
 
 <div class="PortfolioContent-Text">
-	<p>Hola</p>
+	<p>El objetivo del proyecto queda bien reflejado en su propio título, se trataba de realizar una aplicación web capaz de administrar un servicio de logísitica. Ello conllevaba realizar un gran trabajo, ya que requería de la aplicación fuese capaz de diferenciar varios roles (jefe, empleado, administrador de la aplicación, etc.) y atmbién comunicaciones en tiempo real gracias al sistema de pago. Para todo ello he escogido Node.js y MongoDB.</p>
+	<p>La aplicación se divide en varias partes: gestión de productos, gestión de empleados, sistema de pago, chat con el servicio técnico, etc. Ha sido un proyecto que me ha llevado bastante tiempo y sólo he desarrollado la parte <i>back-end</i>, aunque he utilizado un poco CSS para amenizar la presentación. Aún con el tiempo empleado en ella, no creo que sea una aplicación capaz de salir al mercado, por varios motivos: mi falta de conocimiento en seguridad por aquel entonces y faltarían aún características por desarrollar. Lo positivo e este proyecto ha sido todo lo que he aprendido del desarrollo <i>back-end</i>, Node.js y MongoDB.</p>
+	<p>A parte del servidor, también he desarrollado una aplicación móvil encargada de enviar en tiempo real códigos de barras al servidor. Para ello he utilizado Cordova, lo que me ha permitido reciclar mucho código de la aplicación web, y seguir utilizando websockets para comunicación de forma sencilla.</p>
+	<p>La aplicación no está disponible a día de hoy, pero en breves la volveré a publicar.</p>
 </div>
 
 
