Commit 17. Información en página de contactos añadida. Falta captcha

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,1 +1,21 @@
-<header>Contact</header>
+<section class="ContactContainer">
+	<header class="ContactContainer-Header">
+		<h2>Contacto</h2>	
+	</header>
+	<div class="ContactContent">
+		<div class="ContactContent-Cell ContactContent-FirstDiv">
+			<p>Si crees que puedo ser de ayuda para tu empresa ¡no dudes en contactar conmigo!</p>
+			<input type="email" name="email" placeholder="Correo de contacto" class="ContactContent-Input">
+		</div>
+		<div class="ContactContent-Cell">
+			<p>Captch</p>
+		</div>
+		<div class="ContactContent-Cell">
+			<textarea name="mensaje" id="" cols="" rows="" placeholder="Añade aqui tu mensaje" class="ContactContent-textarea"></textarea>
+			
+		</div>
+		<div class="ContactContent-Cell ContactContent-Containerbutton">
+			<button class="ContactContent-button">Enviar</button>
+		</div>
+	</div>
+</section>
