--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ h2{
 }
 
 .NavContainer-Button-First{
-	background: #DEB887;
+	background: rgba(255,255,255,0.8);
 	-webkit-border-radius: 15px 0 0 0;
 	-moz-border-radius: 15px 0 0 0;
 	border-radius: 15px 0 0 0;
@@ -54,6 +54,10 @@ h2{
 	-moz-border-radius: 0 0 0 15px;
 	border-radius: 0 0 0 15px;
 
+}
+
+.colorNavButton{
+	background: #DEB887;
 }
 
 .NavContainer-Button__active{
@@ -400,8 +404,6 @@ h2{
 
 .PortfolioContent-Header__row{
 	display: table-row;
-
-	
 }
 
 .celdaPrimaria{
@@ -422,9 +424,7 @@ h2{
 	text-align: justify;
 }
 .PortfolioContent-Header__p{
-	
 	font-size: 1em;
-	/*background: #A4BEDE;*/
 }
 
 .PortfolioContent-Text{
@@ -433,12 +433,71 @@ h2{
 
 /*CSS Contact Page*/
 .ContactContainer{
-	display:inline-block;
+	display:block;
 	color:black;
 	background: none;
 	margin:5%;
 }
 
+.ContactContainer-Header{
+	border-bottom: solid #DEB887 6px;
+}
+
+.ContactContent{
+	/*border: solid #DEB887 2px;*/
+	border-radius: 15px;
+	margin: 10% auto;
+	width: 60%;
+	display: flex;
+  	flex-wrap: wrap;
+  	/*flex-flow: row wrap;*/
+  	align-items: flex-start;
+}
+
+.ContactContent-Cell{
+	width: 40%;
+  	flex: 1 auto;
+  	padding: 2px 10px;
+}
+
+.ContactContent-FirstDiv{
+	text-align: justify;
+}
+.ContactContent-Input{
+	border:solid #DEB887 1px;
+	width: 90%;
+	padding: 5px;
+	border-radius: 5px;
+
+}
+
+.ContactContent-textarea{
+	border:solid #DEB887 1px;
+	max-width: 100%;
+	height: 150px;
+	max-height: 200px;
+	width: 100%;
+	padding:5px;
+	border-radius: 5px;
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.ContactContent-Containerbutton{
+	text-align: center;
+
+}
+
+.ContactContent-button{
+	margin-top:2.5em;
+	background: none;
+	width: 100px;
+	height: 40px;
+	border: solid #DEB887 4px;
+	border-radius: 5px;
+	color:black;
+}
 /*Fonts*/
 
 @font-face {
